@@ -8,6 +8,10 @@ IN DEVELOPMENT
       that we can pass in the Transport that we already have.
       (John Arbash Meinel, #75721)
 
+    * ``bzr branch -r revid:foo`` can be used to branch any revision in
+      your ancestry. (Previously Branch6 only supported revisions in your
+      mainline). (John Arbash Meinel, #115343)
+
 
 bzr 0.16  2007-05-07
   
